[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph-dataset"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Kapil Duwadi", email = "Kapil.Duwadi@nrel.gov" },
  { name = "Aadil Latif", email = "Aadil.Latif@nrel.gov" },
  { name = "Andrew Glaws", email = "Andrew.Glaws@nrel.gov" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "torch",
  "torch_geometric",
  "pydantic",
  "OpenDSSDirect.py",
  "pytest",
  "pandas",
  "networkx",
  "polars",
  "matplotlib"
]

[project.optional-dependencies]
doc = [
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material",
]
lint = [
  "pylint",
  "black"
]

[project.urls]
Documentation = "https://github.nrel.gov/GATES-TLDRD/graph-dataset#readme"
Issues = "https://github.nrel.gov/GATES-TLDRD/graph-dataset/issues"
Source = "https://github.nrel.gov/GATES-TLDRD/graph-dataset"

[project.scripts]
graphd = "graph_dataset.cli.cli:cli"

[tool.hatch.version]
path = "src/graph_dataset/__about__.py"

[tool.pylint.messages_control]
disable = [
  "missing-class-docstring",
  "missing-module-docstring",
]
max-line-length=100

